src/objects/Budget_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information_Budget_MERC__c</fullName>
        <description>Captures notes for additional information about the budget. Created 10/22/2013 by KLorenti, Mavens Consulting</description>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Date_MERC__c</fullName>
        <description>Date Budget was created. Created 9/27/2013</description>
        <label>Budget Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Center_MERC__c</fullName>
        <description>Cost Center  provided by Budget Owner
Created by John A Adams 10/11/2013</description>
        <inlineHelpText>If more Cost Centers need to be entered, please enter in the Additional Information section below.</inlineHelpText>
        <label>Cost Center</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Budget_Used_MERC__c</fullName>
        <description>Sum of current Budget Line Items. Created 10/22/2013 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>Sum of current Budget Line Items</inlineHelpText>
        <label>Current Budget Used</label>
        <summarizedField>Budget_Line_Item_MERC__c.Total_Amount_MERC__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item_MERC__c.Budget_MERC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InterCompany_Billing_Required_MERC__c</fullName>
        <description>Track if InterCompany billing is required. Created 10/17/2013 by KLorenti, Mavens Consulting.</description>
        <label>InterCompany Billing Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Order_Number_MERC__c</fullName>
        <description>Internal order number if known. Created 10/22/2013 by KLorenti, Mavens Consulting</description>
        <label>Internal Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Budget_Delta_MERC__c</fullName>
        <formula>if(Master_Budget_MERC__c != &apos;&apos;, Current_Budget_Used_MERC__c - Master_Budget_MERC__r.Current_Budget_Used_MERC__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Savings/Overage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Budget_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Budget</label>
        <referenceTo>Budget_MERC__c</referenceTo>
        <relationshipLabel>Budget Versions</relationshipLabel>
        <relationshipName>Child_Budgets_MERC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>Master-Detail relationship from Budget to Meeting. Create 9/30/2012 by KLorenti.</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overage_MERC__c</fullName>
        <formula>IF( Master_Budget_Delta_MERC__c  &gt; 0 , ABS(Master_Budget_Delta_MERC__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Overage in comparison to the Current Budget Used within the Master Budget (this is not a comparison with the Planned Budget field)</inlineHelpText>
        <label>Overage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Budget_MERC__c</fullName>
        <description>Formula field to pull in Budget amount from Meeting. Modified 03/14/2014 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_MERC__r.Planned_Budget_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The planned budget for Forecasting</inlineHelpText>
        <label>Planned Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Budget_Revision_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Budget Revision</label>
        <referenceTo>Budget_MERC__c</referenceTo>
        <relationshipLabel>Budgets (Previous Budget Revision)</relationshipLabel>
        <relationshipName>Previous_Budget_Revisions_MERC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Savings_MERC__c</fullName>
        <formula>IF( Master_Budget_Delta_MERC__c  &lt; 0 , ABS(Master_Budget_Delta_MERC__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Savings in comparison to the Current Budget Used within the Master Budget (this is not a comparison with the Planned Budget field)</inlineHelpText>
        <label>Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_MERC__c</fullName>
        <description>Status of Budget. Created 9/27/2013 by KLorenti.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Savings_MERC__c</fullName>
        <description>Rolls up unit savings from all associated Budget Line Items.  Created on 25/09/2014 by Oliver Dunford, Mavens Consulting.</description>
        <inlineHelpText>The total savings, based upon unit savings multiplied by quantity from associated budget line items</inlineHelpText>
        <label>Total Savings</label>
        <summarizedField>Budget_Line_Item_MERC__c.Total_Savings_MERC__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item_MERC__c.Budget_MERC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Unit_Savings_MERC__c</fullName>
        <description>Rolls up unit savings from all associated Budget Line Items.  Created on 25/09/2014 by Oliver Dunford, Mavens Consulting.</description>
        <inlineHelpText>The total unit savings from associated budget line items</inlineHelpText>
        <label>Total Unit Savings</label>
        <summarizedField>Budget_Line_Item_MERC__c.Unit_Savings_MERC__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item_MERC__c.Budget_MERC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Version_Number_MERC__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>MERC_Budget_Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Budget_Archived</fullName>
        <active>true</active>
        <label>Archived</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Budget_Draft</fullName>
        <active>true</active>
        <description>The initial budget for a Meeting.  Used to enter original amounts during initial forecasting/registration.</description>
        <label>Draft</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Budget_Final</fullName>
        <active>true</active>
        <description>Finalised budget, cannot be modified</description>
        <label>Final</label>
    </recordTypes>
</CustomObject>